# wagtail-fa-svg

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml
scripts/: extract.py
