[tool.poetry]
name = "wagtail-fa-svg"
version = "0.1.0"
description = "Font Awesome SVG icons for Wagtail"
authors = ["vsakkas <vasileios.sakkas96@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "wagtail_fa_svg" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.3"
tqdm = "^4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
